--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Languages\SyntaxHighlightingData.cs" />
     <Compile Include="Languages\UnsavedFile.cs" />
     <Compile Include="Menus\IMenuItem.cs" />
+    <Compile Include="MVVM\ConventionalViewLocator.cs" />
     <Compile Include="MVVM\DataVirtualization\AsyncVirtualizingCollection.cs" />
     <Compile Include="MVVM\DataVirtualization\DataPage.cs" />
     <Compile Include="MVVM\DataVirtualization\DataWrapper.cs" />
@@ -191,6 +192,7 @@
     <Compile Include="MVVM\DataVirtualization\IItemsProvider.cs" />
     <Compile Include="MVVM\DataVirtualization\VirtualizingCollection.cs" />
     <Compile Include="MVVM\Extensions.cs" />
+    <Compile Include="MVVM\ITool.cs" />
     <Compile Include="MVVM\ObservableCollectionExtensions.cs" />
     <Compile Include="MVVM\ViewModel.cs" />
     <Compile Include="Platform\Platform.cs" />
