--- a/AvalonStudio/AvalonStudio/packages.config
+++ b/AvalonStudio/AvalonStudio/packages.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Caliburn.Micro" version="3.0.0" targetFramework="net451" />
+  <package id="Caliburn.Micro.Core" version="3.0.0" targetFramework="net451" />
   <package id="Perspex" version="9999.0.1451-nightly" targetFramework="net451" />
   <package id="Perspex.Desktop" version="9999.0.1451-nightly" targetFramework="net451" />
   <package id="Perspex.Xaml.Behaviors" version="9999.0.114-nightly" targetFramework="net451" />
+  <package id="Prism.Core" version="6.1.0" targetFramework="net451" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net452" />
