--- a/AvalonStudio/AvalonStudio.Controls.Standard/AvalonStudio.Controls.Standard.csproj
+++ b/AvalonStudio/AvalonStudio.Controls.Standard/AvalonStudio.Controls.Standard.csproj
@@ -138,6 +138,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Console\Console.paml.cs">
+      <DependentUpon>Console.paml</DependentUpon>
+    </Compile>
+    <Compile Include="Console\ConsoleViewModel.cs">
+      <DependentUpon>Console.paml</DependentUpon>
+    </Compile>
+    <Compile Include="ErrorList\ErrorList.paml.cs">
+      <DependentUpon>ErrorList.paml</DependentUpon>
+    </Compile>
+    <Compile Include="ErrorList\ErrorListViewModel.cs" />
+    <Compile Include="ErrorList\ErrorViewModel.cs" />
+    <Compile Include="ErrorList\IErrorList.cs" />
     <Compile Include="NewProjectDialog.paml.cs">
       <DependentUpon>NewProjectDialog.paml</DependentUpon>
     </Compile>
@@ -191,9 +203,19 @@
       <Project>{5614aa2f-2b01-4e0d-807e-924680c570ed}</Project>
       <Name>AvalonStudio.Extensibility</Name>
     </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.TextEditor\AvalonStudio.TextEditor.csproj">
+      <Project>{2303a1a3-d7aa-41cc-972d-a710d7d3d1d3}</Project>
+      <Name>AvalonStudio.TextEditor</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="NewProjectDialog.paml" />
+    <EmbeddedResource Include="Console\Console.paml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ErrorList\ErrorList.paml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <EmbeddedResource Include="ProjectConfigurationDialog.paml">
       <SubType>Designer</SubType>
