--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -213,7 +213,7 @@
     </Compile>
     <Compile Include="Controls\DocumentTabsViewModel.cs" />
     <Compile Include="Controls\NewItemDialog.paml.cs">
-      <DependentUpon>NewItemDialog.paml</DependentUpon>
+      <DependentUpon>NewItemDialogView.paml</DependentUpon>
     </Compile>
     <Compile Include="Controls\ViewModelViewHost.cs" />
     <Compile Include="Controls\WatchViewModel.cs" />
@@ -251,9 +251,9 @@
     <Compile Include="Controls\ModalDialog.paml.cs">
       <DependentUpon>ModalDialog.paml</DependentUpon>
     </Compile>
-    <Compile Include="Controls\Dialogs\PackageManagerDialogViewModel.cs" />
+    <Compile Include="Controls\PackageManagerDialogViewModel.cs" />
     <Compile Include="Controls\PackageManagerDialog.paml.cs">
-      <DependentUpon>PackageManagerDialog.paml</DependentUpon>
+      <DependentUpon>PackageManagerDialogView.paml</DependentUpon>
     </Compile>
     <Compile Include="Controls\ParameterSymbolViewModel.cs" />
     <Compile Include="Controls\Registers.xaml.cs">
@@ -310,7 +310,7 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\ModalDialog.paml" />
-    <EmbeddedResource Include="Controls\PackageManagerDialog.paml" />
+    <EmbeddedResource Include="Controls\PackageManagerDialogView.paml" />
     <EmbeddedResource Include="Controls\StatusBar.paml" />
     <EmbeddedResource Include="Controls\ToolBar.paml" />
     <EmbeddedResource Include="Controls\Intellisense.paml">
@@ -327,7 +327,7 @@
     <EmbeddedResource Include="Controls\CallStack.paml" />
     <EmbeddedResource Include="Controls\Locals.paml" />
     <EmbeddedResource Include="Controls\Disassembly.paml" />
-    <EmbeddedResource Include="Controls\NewItemDialog.paml" />
+    <EmbeddedResource Include="Controls\NewItemDialogView.paml" />
     <EmbeddedResource Include="Controls\DebugHoverProbe.paml" />
     <EmbeddedResource Include="Controls\DocumentTabControl.paml" />
     <None Include="libgit2-821131f.so">
