--- a/AvalonStudio/AvalonStudioBuild/AvalonStudioBuild.csproj
+++ b/AvalonStudio/AvalonStudioBuild/AvalonStudioBuild.csproj
@@ -64,6 +64,10 @@
       <Project>{5614aa2f-2b01-4e0d-807e-924680c570ed}</Project>
       <Name>AvalonStudio.Extensibility</Name>
     </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.MiniShell\AvalonStudio.MiniShell.csproj">
+      <Project>{853618d5-76cc-4302-8aff-4b95f51d01f7}</Project>
+      <Name>AvalonStudio.MiniShell</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Projects.CPlusPlus\AvalonStudio.Projects.CPlusPlus.csproj">
       <Project>{47e266ea-bbc4-4794-96da-b1f3ecb5bb9b}</Project>
       <Name>AvalonStudio.Projects.CPlusPlus</Name>
