--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -342,6 +342,10 @@
       <Project>{0b7c8f41-0122-40e8-9701-efcb89c32cc9}</Project>
       <Name>AvalonStudio.Controls.Standard</Name>
     </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Controls.TeamExplorer\AvalonStudio.Controls.TeamExplorer.csproj">
+      <Project>{690f173c-bf89-4f9e-a177-c17313cdbfe3}</Project>
+      <Name>AvalonStudio.Controls.TeamExplorer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AvalonStudio.Debugging.GDB.JLink\AvalonStudio.Debugging.GDB.JLink.csproj">
       <Project>{eb735b57-518a-4dc5-8dff-ca6d5db604d2}</Project>
       <Name>AvalonStudio.Debugging.GDB.JLink</Name>
