Added working implentations of menus, exported by modules. Currently gestures wont work.
Also needs a view model and control to display the menus.

--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -191,8 +191,20 @@
     <Compile Include="Documents\IEditor.cs" />
     <Compile Include="Git\Git.cs" />
     <Compile Include="IoC.cs" />
+    <Compile Include="MainMenu\IMenu.cs" />
+    <Compile Include="MainMenu\IMenuBuilder.cs" />
+    <Compile Include="MainMenu\MenuBuilder.cs" />
     <Compile Include="MainMenu\MenuDefinitions.cs" />
+    <Compile Include="MainMenu\Models\CommandMenuItem.cs" />
+    <Compile Include="MainMenu\Models\MenuItemBase.cs" />
+    <Compile Include="MainMenu\Models\MenuItemSeparator.cs" />
+    <Compile Include="MainMenu\Models\MenuModel.cs" />
+    <Compile Include="MainMenu\Models\StandardMenuItem.cs" />
+    <Compile Include="MainMenu\Models\TextMenuItem.cs" />
+    <Compile Include="MainMenu\ViewModels\MainMenuViewModel.cs" />
     <Compile Include="Menus\MenuDefinitionAttribute.cs" />
+    <Compile Include="MVVM\BindableCollection.cs" />
+    <Compile Include="MVVM\IObservableCollection.cs" />
     <Compile Include="Shell\IShell.cs" />
     <Compile Include="Languages\CodeAnalysisResults.cs" />
     <Compile Include="Languages\CodeCompletionData.cs" />
@@ -246,6 +258,7 @@
     <Compile Include="Toolchains\IToolchain.cs" />
     <Compile Include="Utils\Constants.cs" />
     <Compile Include="Utils\DynamicExtensions.cs" />
+    <Compile Include="Utils\EnumerableExtensions.cs" />
     <Compile Include="Utils\GeneralExtensions.cs" />
     <Compile Include="Utils\IConsole.cs" />
     <Compile Include="Utils\IProjectExtensions.cs" />
