--- a/AvalonStudio/AvalonStudio.Controls.Standard/AvalonStudio.Controls.Standard.csproj
+++ b/AvalonStudio/AvalonStudio.Controls.Standard/AvalonStudio.Controls.Standard.csproj
@@ -154,6 +154,9 @@
       <DependentUpon>ErrorListView.paml</DependentUpon>
     </Compile>
     <Compile Include="ErrorList\IErrorList.cs" />
+    <Compile Include="SolutionExplorer\Commands\OpenSolutionCommandDefinition.cs" />
+    <Compile Include="SolutionExplorer\Commands\NewSolutionCommandDefinition.cs" />
+    <Compile Include="SolutionExplorer\MenuDefinitions.cs" />
     <Compile Include="SolutionExplorer\NewProjectDialogView.paml.cs">
       <DependentUpon>NewProjectDialogView.paml</DependentUpon>
     </Compile>
