--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -252,6 +252,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestFrameworks\ITestFramework.cs" />
     <Compile Include="TestFrameworks\Test.cs" />
+    <Compile Include="ToolBars\CommandToolBarItemDefinition.cs" />
+    <Compile Include="ToolBars\ExcludeToolBarDefinition.cs" />
+    <Compile Include="ToolBars\ExcludeToolBarItemDefinition.cs" />
+    <Compile Include="ToolBars\ExcludeToolBarItemGroupDefinition.cs" />
+    <Compile Include="ToolBars\ToolBarDefinition.cs" />
+    <Compile Include="ToolBars\ToolBarItemDefinition.cs" />
+    <Compile Include="ToolBars\ToolBarItemGroupDefinition.cs" />
     <Compile Include="Toolchains\IToolchain.cs" />
     <Compile Include="Utils\Constants.cs" />
     <Compile Include="Utils\DynamicExtensions.cs" />
