--- a/AvalonStudio/AvalonStudio.Debugging/AvalonStudio.Debugging.csproj
+++ b/AvalonStudio/AvalonStudio.Debugging/AvalonStudio.Debugging.csproj
@@ -112,6 +112,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Reactive.Core, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Rx-Core.2.2.5\lib\net45\System.Reactive.Core.dll</HintPath>
@@ -140,6 +141,7 @@
     <Compile Include="BreakPointManager.cs" />
     <Compile Include="CallStackView.paml.cs" />
     <Compile Include="CallStackViewModel.cs" />
+    <Compile Include="Commands\StartDebuggingCommandDefinition.cs" />
     <Compile Include="DebugManager.cs" />
     <Compile Include="DisassemblyView.paml.cs" />
     <Compile Include="DisassemblyDataProvider.cs" />
@@ -148,6 +150,7 @@
     <Compile Include="IDebugManager.cs" />
     <Compile Include="LocalsView.paml.cs" />
     <Compile Include="LocalsViewModel.cs" />
+    <Compile Include="MenuDefinitions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistersView.xaml.cs">
       <DependentUpon>RegistersView.xaml</DependentUpon>
@@ -179,6 +182,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy $(TargetPath) ..\..\..\AvalonStudio\bin\$(ConfigurationName)\Plugins\$(TargetFileName)</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
