Further porting of Toolbars with Toolbar builder and ToolBar item models.

--- a/AvalonStudio/AvalonStudio/AvalonStudio.csproj
+++ b/AvalonStudio/AvalonStudio/AvalonStudio.csproj
@@ -295,6 +295,15 @@
     <Compile Include="Shell\Commands\SaveAllFileCommandDefinition.cs" />
     <Compile Include="Shell\Commands\SaveFileCommandDefinition.cs" />
     <Compile Include="Shell\MenuDefinitions.cs" />
+    <Compile Include="ToolBars\IToolBar.cs" />
+    <Compile Include="ToolBars\IToolBarBuilder.cs" />
+    <Compile Include="ToolBars\IToolBars.cs" />
+    <Compile Include="ToolBars\Models\CommandToolBarItem.cs" />
+    <Compile Include="ToolBars\Models\ToolBarItemBase.cs" />
+    <Compile Include="ToolBars\Models\ToolBarItemSeparator.cs" />
+    <Compile Include="ToolBars\Models\ToolBarModel.cs" />
+    <Compile Include="ToolBars\ToolBarBuilder.cs" />
+    <Compile Include="ToolBars\ToolBarDefinitions.cs" />
     <Compile Include="ViewModelBaseExtensions.cs" />
     <Compile Include="PaneViewModel.cs" />
     <Compile Include="Controls\MetroWindow.cs" />
